--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "api-playwright-ci-cd",
   "version": "1.0.0",
   "description": "A simple API project with CI/CD pipeline using TypeScript, Playwright, and GitHub Actions.",
-  "main": "src/app.ts",
+  "main": "dist/app.js",
   "scripts": {
     "test": "jest",
     "test:e2e": "playwright test",
@@ -26,11 +26,13 @@
     "playwright": "^1.12.0",
     "supertest": "^7.1.0",
     "ts-jest": "^29.3.1",
+    "ts-node": "^10.9.2",
     "typescript": "^4.1.3"
   },
   "jest": {
     "preset": "ts-jest",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.ts$"
   },
   "license": "MIT"
 }
