--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
       "*": ["node_modules/*", "*"]
     }
   },
-  "include": ["src/**/*", "tests/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src/**/*.ts", "tests/**/*.ts"],
+  "exclude": ["node_modules", "**/*.js"]
 }
