--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,6 +32,8 @@ jobs:
       - name: Check code coverage
         run: npm run coverage
 
+      - name: Check code coverage threshold (<90%)
+        run: npx nyc check-coverage --lines 90 --functions 90 --branches 90
   uat:
     runs-on: ubuntu-latest
     needs: ci
