--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "jest": "^29.7.0",
+    "nyc": "^17.1.0",
     "playwright": "^1.12.0",
     "supertest": "^7.1.0",
     "ts-jest": "^29.3.1",
@@ -34,6 +35,14 @@
     "preset": "ts-jest",
     "testEnvironment": "node",
     "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.ts$"
+  },
+  "nyc": {
+    "temp-dir": "./coverage",
+    "all": true,
+    "reporter": [
+      "html",
+      "text-summary"
+    ]
   },
   "license": "MIT"
 }
