--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -48,9 +48,12 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-        
+
       - name: Build the API
         run: npm run build
+
+      - name: Install dependencies # Install dependencies
+        run: npm ci
 
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
@@ -60,7 +63,13 @@ jobs:
 
       - name: Run Playwright E2E tests
         run: npm run test:e2e
-
+        
+      - uses: actions/upload-artifact@v4 # Upload test results as an artifact
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright-report
+          path: playwright-report/ # Upload the test results to the playwright-report directory
+          retention-days: 30 # Set the retention days to 30 days
   production:
     runs-on: ubuntu-latest
     needs: uat
