--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,12 +13,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
-          node-version: '14'
+          node-version: lts/* # Use the latest LTS version of Node.js
 
       - name: Install dependencies
         run: npm install
@@ -39,12 +39,12 @@ jobs:
     needs: ci
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
-          node-version: '14'
+          node-version: lts/* # Use the latest LTS version of Node.js
 
       - name: Install dependencies
         run: npm install
@@ -72,7 +72,7 @@ jobs:
     needs: uat
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Manual approval
         run: echo "Please approve the deployment to production."
