--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -70,6 +70,8 @@ jobs:
   production:
     runs-on: ubuntu-latest
     needs: uat
+    environment:
+      name: production
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
